[package]
name = "ktv-casting"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
chrono = "0.4.42"
futures = "0.3.31"
futures-util = "0.3.31"
local-ip-address = "0.6.8"
moka = { version = "0.12.12", features = ["future"] }
reqwest = { version = "0.13.1", features = ["json", "stream"] }
rupnp = "3.0.0"
serde_json = "1.0.149"
slugify = "0.1.0"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
urlencoding = "2.1.3"
