[package]
name = "ktv-casting"
version = "0.1.0"
edition = "2024"
default-run = "ktv-casting"

[[bin]]
name = "ktv-casting"
path = "src/main.rs"
# 设置为默认二进制，这样执行 cargo run 时会直接运行这个
required-features = []

[[bin]]
name = "check_rupnp"
path = "check_rupnp.rs"
required-features = ["check-rupnp"]

[features]
# 默认功能集合
default = []

# 用于编译 check_rupnp 二进制的功能
check-rupnp = []

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
chrono = "0.4.42"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
local-ip-address = "0.6.8"
log = "0.4.29"
moka = { version = "0.12.12", features = ["future"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots"] }
rupnp = "3.0.0"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
urlencoding = "2.1.3"
anyhow = "1.0"
